Fix issue with reviews star not showing when adding a review.

--- a/formwidgets/starrating/assets/css/starrating.css
+++ b/formwidgets/starrating/assets/css/starrating.css
@@ -1,7 +1,8 @@
 .field-rating {
-	margin-right: 30px;
+  margin-right: 30px;
 }
-.field-rating .rating > .fa {
-	color: #FDB242;
-	font-size: 22px;
+
+.field-rating .rating > .fa-star {
+  color: #FDB242;
+  font-size: 22px;
 }
